jupyter notebook finalized

--- a/scripts/exampleQoSMeasurementsToQoEdist.ipynb
+++ b/scripts/exampleQoSMeasurementsToQoEdist.ipynb
@@ -117,9 +117,9 @@
     "## QoE Metrics\n",
     "In the following, we compute the MOS, GoB (ratio of users rating 'good or better') and PoW (ratio of users rating 'poor or worse') as QoE metrics. We can simply use the QoE distribution $Q$ to derive those measures.\n",
     "\n",
-    "We can also derive those QoE metrics using the fundamental relationships paper. \\\n",
-    "_Hoßfeld, T., Heegaard, P. E., Skorin-Kapov, L., & Varela, M. (2019, June). \\\n",
-    "Fundamental Relationships for Deriving QoE in Systems. \\\n",
+    "We can also derive those QoE metrics using the fundamental relationships paper. \n",
+    "_Hoßfeld, T., Heegaard, P. E., Skorin-Kapov, L., & Varela, M. (2019, June). \n",
+    "Fundamental Relationships for Deriving QoE in Systems. \n",
     "In 2019 Eleventh Int. Conf. on Quality of Multimedia Experience (QoMEX) (pp. 1-6). IEEE._\n",
     "\n",
     "QoE metrics in the system for QoS measurements $X$ for a 5-point scale:\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
