jupyter notebook finalized

--- a/scripts/exampleQoSMeasurementsToQoEdist.ipynb
+++ b/scripts/exampleQoSMeasurementsToQoEdist.ipynb
@@ -12,10 +12,10 @@
     "This tool is published under the license CC BY-SA 4.0 at\n",
     "https://github.com/hossfeld/approx-qoe-distribution \n",
     "\n",
-    "The following paper is to be cited in the bibliography whenever the tool is used.\\\n",
-    "_Tobias Hossfeld, Poul E. Heegaard, Martin Varela, Lea Skorin-Kapov, Markus Fiedler. \\\n",
-    "    \"From QoS Distributions to QoE Distributions: a System's Perspective\". \\\n",
-    "    4th International Workshop on Quality of Experience Management (QoE Management 2020), \\\n",
+    "The following paper is to be cited in the bibliography whenever the tool is used.\n",
+    "_Tobias Hossfeld, Poul E. Heegaard, Martin Varela, Lea Skorin-Kapov, Markus Fiedler. \n",
+    "    \"From QoS Distributions to QoE Distributions: a System's Perspective\". \n",
+    "    4th International Workshop on Quality of Experience Management (QoE Management 2020), \n",
     "    featured by IEEE Conference on Network Softwarization (IEEE NetSoft 2020), Ghent, Belgium._\n",
     "\n",
     "Created on Thu Mar 26 21:51:00 2020\n",
